--- a/templates/results.html
+++ b/templates/results.html
@@ -31,11 +31,13 @@
             </div>
         </div>
     </div>
-    <div class="text-end mb-3">
-        <button id="toggle" type="button" class="btn btn-outline-secondary">
-            <span id="table-view-toggle">نمایش جدول</span>
-            <span id="element-view-toggle" style="display: none;">نمایش عنصرها</span>
-        </button>
+    <div class="row text-start mb-3">
+        <div class="col">
+            <button id="toggle" type="button" class="btn btn-sm btn-secondary">
+                <span id="table-view-toggle">نمایش جدول</span>
+                <span id="element-view-toggle" style="display: none;">نمایش جداگانه</span>
+            </button>
+        </div>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-2 mb-5" id="element-view" dir="ltr">
         {% for element, properties in output.items() %}
@@ -64,9 +66,9 @@
         </div>
         {% endfor %}
     </div>
-    <div class="row mb-5" style="display: none;" id="table-view" dir="ltr">
+    <div class="row mb-5 overflow-auto" style="display: none;" id="table-view" dir="ltr">
         <div class="col">
-            <table class="table table-striped table-bordered table-hover">
+            <table class="table table-responsive table-striped table-bordered table-hover">
                 <thead>
                     <tr>
                         <th scope="col">
